--- a/style.css
+++ b/style.css
@@ -1,32 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root {
+    --darkblue: #1F2937;
+    --textlight: #F9FAF8;
+    --textsecondary: #E5E7EB;
+}
+
 * {
     padding: 0;
     margin: 0;
+    font-family: Roboto, sans-serif;
 }
 
-.header, .header-links {
+.header {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: var(--darkblue);
+    position: fixed;
+    width: 100%;
+}
+
+.header-text {
+    color: var(--textlight);
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.header-right {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    background-color: darkblue;
-    color: white;
-    padding: 1rem 3rem;
 }
 
 .header-links {
-    gap: 1rem;
+    display: flex;
     list-style: none;
-    padding: 0;
-    margin: 0;
+    gap: 20px;
+    margin-right: 40px;
 }
 
 .header-link {
     text-decoration: none;
-    color: white;
-    font-size: 22px;
-    border: 2px solid White;
-    border-radius: 3px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
+    color: var(--textsecondary);
+    font-size: 18px;
 }
