--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     --darkblue: #1F2937;
     --textlight: #F9FAF8;
     --textsecondary: #E5E7EB;
+    --blue: #3882F6;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 * {
@@ -12,18 +17,26 @@
     font-family: Roboto, sans-serif;
 }
 
+button:hover {
+    cursor: pointer;
+    background-color: var(--textlight);
+    color: var(--blue);
+}
+
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 20px;
     background-color: var(--darkblue);
     position: fixed;
     width: 100%;
+    height: 75px;
 }
 
 .header-text {
     color: var(--textlight);
-    font-size: 48px;
+    font-size: 36px;
     font-weight: 900;
 }
 
@@ -43,4 +56,48 @@
     text-decoration: none;
     color: var(--textsecondary);
     font-size: 18px;
+}
+
+.hero {
+    padding-top: 145px;
+    padding-bottom: 30px;
+    padding-left: 100px;
+    padding-right: 100px;
+    background-color: var(--darkblue);
+    color: var(--textlight);
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.hero-left {
+    min-width: 400px;
+    max-width: 600px;
+}
+
+.hero-header {
+    font-size: 48px;
+    font-weight: 900;
+    padding: 0px 5px 5px 5px;
+    margin-top: -10px;
+}
+
+.hero-text {
+    font-size: 18px;
+    color: var(--textsecondary);
+    padding: 5px;
+}
+
+.hero-text.small {
+    font-size: 8px;
+}
+
+.hero-btn {
+    background-color: var(--blue);
+    color: var(--textlight);
+    font-size: 16px;
+    font-weight: 900;
+    padding: 5px 25px;
+    border-radius: 30px;
+    margin: 5px;
 }
