--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     --textlight: #F9FAF8;
     --textsecondary: #E5E7EB;
     --blue: #3882F6;
+    --orange: orange;
 }
 
 html {
@@ -19,9 +20,11 @@ html {
 
 button:hover {
     cursor: pointer;
-    background-color: var(--textlight);
-    color: var(--blue);
+    background-color: var(--orange);
+    color: var(--darkblue);
 }
+
+/* HEADER */
 
 .header {
     display: flex;
@@ -32,6 +35,7 @@ button:hover {
     position: fixed;
     width: 100%;
     height: 75px;
+    border-bottom: 2px solid var(--textsecondary);
 }
 
 .header-text {
@@ -58,6 +62,12 @@ button:hover {
     font-size: 18px;
 }
 
+.header-link:hover {
+    color: var(--orange);
+}
+
+/* HERO SECTION */
+
 .hero {
     padding-top: 145px;
     padding-bottom: 30px;
@@ -75,7 +85,7 @@ button:hover {
     max-width: 600px;
 }
 
-.hero-header {
+.hero-heading {
     font-size: 48px;
     font-weight: 900;
     padding: 0px 5px 5px 5px;
@@ -100,4 +110,54 @@ button:hover {
     padding: 5px 25px;
     border-radius: 30px;
     margin: 5px;
+}
+
+/* PROJECT GALLERY */
+
+.projects {
+    background-color: bisque;
+    padding: 10px 200px;
+    min-width: 400px;
+}
+
+.projects-heading {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.project-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 1rem;
+}
+
+.project-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+}
+
+.project-img {
+    border: 5px solid var(--blue);
+    border-radius: 15px;
+}
+
+.project-img:hover {
+    border: 5px solid var(--orange);
+    cursor: pointer;
+}
+
+.project-title {
+    width: 300px;
+    text-align: center;
+    font-size: 22px;
+}
+
+.project-text {
+    width: 300px;
+    text-align: center;
+    font-size: 14px;
 }
