--- a/style.css
+++ b/style.css
@@ -21,10 +21,9 @@ html {
 button:hover {
     cursor: pointer;
     background-color: var(--orange);
-    color: var(--darkblue);
 }
 
-#hero, #projects, #quote-section {
+#hero, #projects, #quote, #contacts {
     scroll-margin-top: 110px;
 }
 
@@ -110,8 +109,8 @@ button:hover {
     background-color: var(--blue);
     color: var(--textlight);
     font-size: 16px;
-    font-weight: 900;
     padding: 5px 25px;
+    border: 1px solid var(--textlight);
     border-radius: 30px;
     margin: 5px;
 }
@@ -193,4 +192,38 @@ button:hover {
     font-weight: 900;
     color: var(--darkblue);
     text-align: right;
+}
+
+/* CONTACTS */
+
+.contact-section {
+    background-color: white;
+    padding: 50px 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.contacts {
+    background-color: var(--blue);
+    border: 1px solid var(--blue);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    padding: 30px;
+    width: 600px;
+}
+
+.contact-heading {
+    color: var(--textlight)
+}
+
+.contact-button {
+    border: 3px solid var(--textlight);
+    border-radius: 10px;
+    background-color: var(--blue);
+    padding: 5px 15px;
+    font-size: 28px;
+    color: var(--textlight);
 }
