--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ button:hover {
 }
 
 #hero, #projects, #quote, #contacts {
-    scroll-margin-top: 110px;
+    scroll-margin-top: 80px;
 }
 
 /* HEADER */
@@ -37,13 +37,13 @@ button:hover {
     background-color: var(--darkblue);
     position: fixed;
     width: 100%;
-    height: 75px;
+    height: 40px;
     border-bottom: 2px solid var(--textsecondary);
 }
 
 .header-text {
     color: var(--textlight);
-    font-size: 36px;
+    font-size: 26px;
     font-weight: 900;
 }
 
@@ -177,6 +177,7 @@ button:hover {
 .quote-section {
     background-color: var(--textsecondary);
     display: flex;
+    justify-content: center;
     padding: 100px 300px;
 }
 
@@ -185,6 +186,8 @@ button:hover {
     font-style: italic;
     font-weight: 300;
     color: var(--darkblue);
+    max-width: 1000px;
+    text-align: center;
 }
 
 .quote-author {
@@ -192,31 +195,37 @@ button:hover {
     font-weight: 900;
     color: var(--darkblue);
     text-align: right;
+    padding-right: 80px;
 }
 
 /* CONTACTS */
 
 .contact-section {
     background-color: white;
-    padding: 50px 200px;
+    padding: 100px 300px;
     display: flex;
     justify-content: center;
 }
 
 .contacts {
+    box-sizing: border-box;
     background-color: var(--blue);
     border: 1px solid var(--blue);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
     padding: 30px;
-    width: 600px;
+    width: 1000px;
 }
 
-.contact-heading {
-    color: var(--textlight)
+.contact-header {
+    text-align: center;
+}
+
+.contact-heading, .contact-text {
+    color: var(--textlight);
+    padding-bottom: 15px;
 }
 
 .contact-button {
@@ -226,4 +235,17 @@ button:hover {
     padding: 5px 15px;
     font-size: 28px;
     color: var(--textlight);
+}
+
+/* FOOTER */
+
+.footer {
+    display: flex;
+    justify-content: center;
+    padding: 15px 300px;
+    background-color: var(--darkblue);
+}
+
+.footer-text {
+    color: var(--textsecondary);
 }
